--- a/vikas-backend/.env
+++ b/vikas-backend/.env
@@ -1,1 +1,4 @@
+MONGO_URI=mongodb+srv://architsinghal139_db_user:<db_password>@evilcap.afm7rsu.mongodb.net/?retryWrites=true&w=majority&appName=Evilcap
+
+
 GEMINI_API_KEY=AIzaSyC6AGQ4lRcSacGfdcNdA_oouXkHJpxVvfM
