--- a/vikas-backend/package.json
+++ b/vikas-backend/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "description": "",
   "main": "server.js",
+  
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node server/server.js",
+  "build": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
