--- a/vikas-backend/package.json
+++ b/vikas-backend/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   
   "scripts": {
-  "start": "node server/server.js",
+  "start": "node server.js",
   "build": "cd frontend && npm install && npm run build"
   },
   "keywords": [],
