--- a/vikas-backend/package.json
+++ b/vikas-backend/package.json
@@ -6,8 +6,7 @@
   "main": "server.js",
   
   "scripts": {
-  "start": "node server.js",
-  
+  "start": "node server.js"  
   },
   "keywords": [],
   "author": "",
